23/11/2020 - 18:53 - FIXED - Canvas scrolling above window.