@@ -1,5 +1,6 @@
 import youtube_dl
 import threading
+import os
 
 # player functions
 def search(title, amount=10): # search for results, works
@@ -24,3 +25,39 @@ class BackgroundTask(threading.Thread):
     def run(self):
         self.feedback = self.task(*self.args) # initiate the function and return data
         self.alive = False # kill thread and waiting loop
+
+# playlist class, each playlist is its own instance
+class Playlist:
+    def __init__(self):
+        self.name = ""
+        self.description = ""
+        self.songs = []
+
+    def store(self): # create or update a playlist
+        with open(os.path.join("userdata/playlists/", self.name, ".txt"), "w") as playlist:
+            playlist.write(self.name + "\n")
+            playlist.write(self.description + "\n")
+            for song in self.songs:
+                playlist.write(song + "\n")
+
+    def load(self, playlist_name): # load a stored playlist
+        files = os.listdir("userdata/playlists/")
+        filename = playlist_name + ".txt"
+        if filename not in files:
+            return None
+
+        with open(os.path.join("userdata/playlists/", filename), "r") as playlist:
+            data = playlist.readlines()
+            if len(data) < 2: # the file must have a description and title, default at least, otherwise there is an invalid format
+                return False
+
+            self.name = playlist_name
+            self.description = data[0].strip("\n")
+            for song in data[1:]:
+                self.songs.append(song.strip("\n"))
+
+        return True
+
+    def delete(self): # delete a playlist
+        os.remove("userdata/playlists/", self.name + ".txt")
+        del self
